Fixed Darkmode and lightmode colours in technology tab, fixed icon colours in dark mode

--- a/themes/kmom02/scss/style-dark.scss
+++ b/themes/kmom02/scss/style-dark.scss
@@ -42,6 +42,14 @@ body {
     background-color: $Darksecondary-colour;
 }
 
+.fab {
+    color: $Darktext-colour;
+}
+
+.fas {
+    color: $Darktext-colour;
+}
+
 .main {
     flex: 1 0 auto;
     padding: 1% 5%;
@@ -88,7 +96,7 @@ body {
 .technology h3 {
     width: 100%;
     background-color: $Darkmain-colour;
-    color:$Darksecondary-colour;
+    color:$Darktext-colour;
 }
 
 .technology-container h1 {
