--- a/themes/kmom02/scss/variables.scss
+++ b/themes/kmom02/scss/variables.scss
@@ -3,7 +3,8 @@ $main-colour:#F2F678;
 $secondary-colour:#F6F9A8;
 $text-colour: rgb(49, 49, 49);
 $block:white; 
-
+$tech: rgb(236, 236, 236);
+$Htech: rgb(209, 209, 209);
 
 //Darkmode
 $Darkmain-colour:#06005f;
